[gd_scene load_steps=3 format=3 uid="uid://dypgu5ugmosbt"]

[ext_resource type="Script" uid="uid://bqib4scdkwnpv" path="res://scripts/base_component.gd" id="1_6ykhq"]

[sub_resource type="LabelSettings" id="LabelSettings_0rr5u"]

[node name="BaseComponent" type="PanelContainer"]
offset_right = 59.0
offset_bottom = 23.0
theme_type_variation = &"Component"
script = ExtResource("1_6ykhq")
inputs = 0
outputs = 0

[node name="LabelMargin" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_right = 6

[node name="Name" type="Label" parent="LabelMargin"]
layout_mode = 2
text = "name"
label_settings = SubResource("LabelSettings_0rr5u")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="InputMargin" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = -4
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 4

[node name="InputConnections" type="VBoxContainer" parent="InputMargin"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 2
alignment = 1

[node name="OutputMargin" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = -4
theme_override_constants/margin_bottom = 2

[node name="OutputConnections" type="VBoxContainer" parent="OutputMargin"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 2
alignment = 1
